# transformer-from-scratch

./: .gitignore  LICENSE  README.md  attention_visual.ipynb  config.py  dataset.py  model.py  pyproject.toml  train.py
