[tool.poetry]
name = "transformer-from-scratch"
version = "0.1.0"
description = "Transformer from scratch (yt video https://www.youtube.com/watch?v=ISNdQcPhsts)"
authors = ["Alessandro Farasin <alessandro.farasin@live.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.1.2+cu121", source = "pytorch"}
torchvision = {version = "^0.16.2+cu121", source = "pytorch"}
torchaudio = {version = "^2.1.2+cu121", source = "pytorch"}
transformers = "^4.36.2"
datasets = "^2.16.1"
tensorboard = "^2.15.1"
torch-tb-profiler = "^0.4.3"
altair = "^5.2.0"
ipykernel = "^6.29.0"
ipywidgets = "^8.1.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
